# ocaml-chat

./: .gitignore  .ocamlformat  Makefile  README.md  chat.opam  dune-project
lib/: client.ml  client.mli  dune  errors.ml  handler.ml  infix.ml  protocol.ml  round_trip.ml  round_trip.mli  server.ml  server.mli  session.ml  trace.ml
test/: dune  protocol_test.ml  server_test.ml
